--- a/angular/01-angular-starter-bootstrap/src/app/app.html
+++ b/angular/01-angular-starter-bootstrap/src/app/app.html
@@ -1,6 +1,9 @@
 <main>
   <div class="container">
     <div class="row">
+      <h1>angular-starter</h1>
+    </div>
+    <div class="row">
       <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
